--- a/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
+++ b/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
@@ -1093,39 +1093,34 @@ word-break: break-all; */
             </div>
             <div style="display: none" id="videos" class="hideFirst allThings">
                 <div class="videoCont">
-                    <video src="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="../Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="../Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="../Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="../Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="../Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="../Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="../Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="../Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="../Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="../Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
 
                 <style>
@@ -1200,40 +1195,46 @@ word-break: break-all; */
             </div>
             <div style="display: none" id="audios" class="hideFirst allThings">
                 <div class="audioCont">
-                    <audio src="../Audios/enock jonas   baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                </div>
+                <div class="audioCont">
+                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
 
-                <div class="audioCont">
-                    <audio src="../Audios/enock jonas   baraka.mp3" controls></audio>
-                    <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
-                </div>
-
-                <div class="audioCont">
-                    <audio src="../Audios/enock jonas   baraka.mp3" controls></audio>
-                    <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3.webm" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
-                </div>
-
-                <div class="audioCont">
-                    <audio src="../Audios/enock jonas   baraka.mp3" controls></audio>
-                    <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
-                </div>
-
-                <div class="audioCont">
-                    <audio src="../Audios/enock jonas   baraka.mp3" controls></audio>
-                    <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
-                </div>
-
-                <div class="audioCont">
-                    <audio src="../Audios/enock jonas   baraka.mp3" controls></audio>
-                    <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
-                </div>
                 <script>
                     var audioss = document.querySelectorAll('#audios audio');
                     audioss.forEach((audd) => {
