--- a/galleryKakaJere/gallery_winfredMtove/index.html
+++ b/galleryKakaJere/gallery_winfredMtove/index.html
@@ -984,44 +984,34 @@
             </div>
             <div style="display: none" id="videos" class="hideFirst allThings">
                 <div class="videoCont">
-                    <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
-                            -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
-                            -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
-                            -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
-                            -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
-                    <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
+                    <video src="Video/Songs/You are My All in All.mp4" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
-                            -
-                            Everything (Amen)<i class="fas fa-download"></i></a></span>
+                        <a href="Video/Songs/You are My All in All.mp4" download>You are My All in All<i class="fas fa-download"></i></a></span>
                 </div>
             
             <style>
