--- a/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
+++ b/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
@@ -1195,46 +1195,46 @@ word-break: break-all; */
             </div>
             <div style="display: none" id="audios" class="hideFirst allThings">
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="audioCont">
-                    <audio src="../Audio/enock jonas baraka.mp3" controls></audio>
+                    <audio src="../Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audio/enock jonas baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
+                        <a href="../Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i class="fas fa-download"></i></a></span>
                 </div>
-
+enock jonas   baraka.mp3
                 <script>
                     var audioss = document.querySelectorAll('#audios audio');
                     audioss.forEach((audd) => {
