--- a/index.html
+++ b/index.html
@@ -724,37 +724,43 @@
         <h2 id="heree" class="section-title">My<span>Gallery</span></h2>
 
         <div class="galleryy">
-            <div data-src="images/pic2.JPG" class="my-img portrait">
-                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
+            <div data-src="./images/Commit1/Jere (1)" class="my-img portrait">
+                <img src="./images/Commit1/Jere (1).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
             </div>
-            <div data-src="images/pic2.JPG" class="my-img portrait">
-                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
+            <div data-src="./images/Commit1/Jere (2)" class="my-img portrait">
+                <img src="./images/Commit1/Jere (2).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
             </div>
-            <div data-src="images/pic2.JPG" class="my-img portrait">
-                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
-            </div>
-
-            <div data-src="images/pic1.jpg" class="my-img  landscape" onclick="showThis(this)">
-                <img src="images/pic1.jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
-            </div>
-            <div data-src="images/pic1.jpg" class="my-img  landscape" onclick="showThis(this)">
-                <img src="images/pic1.jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
-            </div>
-            <div data-src="images/pic2.JPG" class="my-img portrait">
-                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
-            </div>
-            <div data-src="images/pic2.JPG" class="my-img portrait">
-                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
-            </div>
-            <div data-src="images/pic2.JPG" class="my-img portrait">
-                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
+            <div data-src="./images/Commit1/Jere (3).jpg" class="my-img portrait">
+                <img src="./images/Commit1/Jere (3).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
             </div>
 
             <div data-src="images/pic1.jpg" class="my-img  landscape" onclick="showThis(this)">
                 <img src="images/pic1.jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
             </div>
-            <div data-src="images/pic1.jpg" class="my-img  landscape" onclick="showThis(this)">
-                <img src="images/pic1.jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            <div data-src="images/Commit1/Jere_Land (3).jpg" class="my-img  landscape" onclick="showThis(this)">
+                <img src="images/Commit1/Jere_Land (3).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+            <div data-src="images/Commit1/Jere_Land (4).jpg" class="my-img  landscape" onclick="showThis(this)">
+                <img src="images/Commit1/Jere_Land (4).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+            <div data-src="images/Commit1/Jere_Land (1).jpg" class="my-img  landscape" onclick="showThis(this)">
+                <img src="images/Commit1/Jere_Land (1).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+            <div data-src="images/pic2.JPG" class="my-img portrait">
+                <img src="images/pic2.JPG" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+            <div data-src="images/Commit1/Jere_Port (1).jpg" class="my-img portrait">
+                <img src="images/Commit1/Jere_Port (1).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+            <div data-src="images/Commit1/Jere_Port (2).jpg" class="my-img portrait">
+                <img src="images/Commit1/Jere_Port (2).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+
+            <div data-src="images/Commit1/Jere_Land (5).jpg" class="my-img  landscape" onclick="showThis(this)">
+                <img src="images/Commit1/Jere_Land (5).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
+            </div>
+            <div data-src="images/Commit1/Jere_Land (2).jpg" class="my-img  landscape" onclick="showThis(this)">
+                <img src="images/Commit1/Jere_Land (2).jpg" alt="Jeremiah Joseph" onclick="showThis(this)">
             </div>
             <style>
                 #gallery {
