--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <label for="email">Provide your email here</label>
                 <input type="email" name="Email Address" id="email" placeholder="eg. someone@domain.com" validate>
 
-                <button id="serReq" type="button" onclick="sendReq()">Send Service Request</button>
+                <button id="serReq" type="submit" onclick="sendReq()">Send Service Request</button>
             </form>
             <style>
                 #hireMeDialg .sendBox #formm label {
